--- a/styles/components/_post.scss
+++ b/styles/components/_post.scss
@@ -11,12 +11,10 @@
  */
 
 .post, .page {
-  margin-bottom: 0;
   margin-bottom: 4em;
   padding-left: 2em;
   padding-right: 2em;
   padding-bottom: 0;
-  padding-top: 3em;
   background: $main-bg-color;
   @include border-radius(.2em);
   overflow: hidden;
